# abm-agricultural-extension

./: .gitignore  README.md  concat_sim_output.py  configuration.py  generate_networks.py  pyproject.toml  simulator.py
config/: config.yaml
config/social/extension/: f_10.yaml  f_15.yaml  f_20.yaml  f_25.yaml  f_30.yaml  f_35.yaml  f_40.yaml  f_45.yaml  f_50.yaml  f_55.yaml  f_60.yaml  focused_template.yaml  mixed_template.yaml  u_100.yaml  uniform_template.yaml
config/social/learning/: average.yaml  most_common.yaml
input/: landscape.parquet  n10_m2.parquet  n30_m2.parquet  spatial_20m.parquet
model/: __init__.py  config.py  constants.py  model.py  network.py  protocols.py  scenario.py  utils.py
model/agents/: __init__.py  base.py  extension.py  grower.py  spatial.py
model/pest_control/: __init__.py  control_methods.py
